feat: better filters and docker image
